# plant-data

./: README.md  distance_sensor.py  pyproject.toml  sensors.py  take_picture.bash
plant_data/: gsheets.py  main.py  pigpio_dht11.py  sensors.py
